[package]
name = "datastore-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastore-core = { path = "../core" }
datastore-client = { path = "../client" }
clap = "3.0.0-beta.2"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
prettytable-rs = "0.8.0"
