[package]
name = "datastore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastore-core = { path = "../core" }
datastore-client = { path = "../client" }
clap = "3.0.0-beta.2"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
prettytable-rs = "0.8.0"
serde_json = "1.0.64"
anyhow = "1.0.41"
chrono = "0.4.19"
serde = "1.0.126"
