[package]
name = "datastore-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastore-core = { path = "../core" }
futures = "0.3.15"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"
