[package]
name = "datastore-client"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
datastore-core = { path = "../core" }
futures = "0.3.15"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"

[dev-dependencies]
chrono = "0.4.19"
rust_decimal = "1.14.3"
tokio = { version = "1.7.1", features = ["macros", "rt"] }
