[package]
name = "datastore-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rust_decimal = { version = "1.14.3", features = ["tokio-pg"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
