[package]
name = "datastore-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
config = "0.11.0"
datastore-core = { path = "../core" }
dotenv = "0.15.0"
mobc = "0.7.3"
mobc-postgres = "0.7.0"
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
serde = "1.0.126"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["macros", "rt"] }
tokio-postgres = "0.7.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.1"
